--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script>
 </head>
-<body oncontextmenu="return false">    
+<body >    
+  <!-- oncontextmenu="return false" -->
     <!-- Navbar --> 
      <section id="home">
       <div class="container-fluid position-fixed" id="nav">
@@ -77,17 +78,19 @@
                     School <span class="fw-bold color-acsent">Smk Negeri 2 Kraksaan</span>
                     </p>
 
-                    <button class="btn btn-custom1">Lest's Talk <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+                    <a href="#about">
+                      <button class="btn btn-custom1">Lest's Talk <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
                       </svg>
                     </button>
+                    </a>
 
                     <div class="social-icon position-absolute bottom-0">
                         <!-- <i class="bi bi-linkedin"></i> -->
-                         <a href="https://github.com/ifantrijm" target="_blank"><i class="bi bi-github"></i></a>
-                         <a href="#"><i class="bi bi-instagram"></i></a>
-                         <a href="#"><i class="bi bi-tiktok"></i></a>
-                         <a href="#"><i class="bi bi-youtube"></i></a><br>
+                         <a href="https://github.com/" target="_blank"><i class="bi bi-github"></i></a>
+                         <a href="" target="_blank"><i class="bi bi-instagram"></i></a>
+                         <a href="https://www.tiktok.com/@ifantrijulianmaul?_r=1&_d=efagi12j9fhceb&sec_uid=MS4wLjABAAAAL_LSSG5sAJgAuBhatWw32YjquSD4N_ZYz8QyX7P44ZI3jfwKzd7VX2PA_EFXTu6r&share_author_id=6964333624032953345&sharer_language=id&source=h5_t&u_code=dii5m49b1bd55k&timestamp=1747841191&user_id=6964333624032953345&sec_user_id=MS4wLjABAAAAL_LSSG5sAJgAuBhatWw32YjquSD4N_ZYz8QyX7P44ZI3jfwKzd7VX2PA_EFXTu6r&utm_source=whatsapp&utm_campaign=client_share&utm_medium=android&share_iid=7505187777438287623&share_link_id=209740f1-e0c0-4229-af60-0b3f9f63f816&share_app_id=1180&ugbiz_name=ACCOUNT&ug_btm=b8727%2Cb7360&social_share_type=5&enable_checksum=1" target="_blank"><i class="bi bi-tiktok"></i></a>
+                         <a href="" target="_blank"><i class="bi bi-youtube"></i></a><br>
                          <h5 href="" class="fw-bold text-decoration-none text-white">
                             Follow <span class="color-acsent">and Like</span>
                          </h5>
@@ -137,23 +140,29 @@
                         <h1 class="fw-bold text-center">Skill</h1>
                         <hr>
                     </div>
-                    <div class="wrapper">
-                        <div class="card office">
-                            <div class="circle">
-                                <div class="bar">
-                                    <div class="box"><span></span></div>
-                                </div>
-                                <div class="text">MR OFFICE</div>
-                            </div>
+                    <div class="wrapper d-flex justify-content-center">
+                      <div class="row">
+                        <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-4">
+                          <div class="card office">
+                              <div class="circle">
+                                  <div class="bar">
+                                      <div class="box"><span></span></div>
+                                  </div>
+                                  <div class="text">MR OFFICE</div>
+                              </div>
+                          </div>
                         </div>
-                        <div class="card html">
-                            <div class="circle">
-                                <div class="bar">
-                                    <div class="box"><span></span></div>
-                                </div>
-                                <div class="text">HTML & CSS</div>
-                            </div>
+                        <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-4">
+                          <div class="card html">
+                              <div class="circle">
+                                  <div class="bar">
+                                      <div class="box"><span></span></div>
+                                  </div>
+                                  <div class="text">HTML & CSS</div>
+                              </div>
+                          </div>
                         </div>
+                        <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-4">
                         <div class="card js">
                             <div class="circle">
                                 <div class="bar">
@@ -162,14 +171,20 @@
                                 <div class="text">javascrip</div>
                             </div>
                         </div>
-                        <div class="card php">
-                            <div class="circle">
-                                <div class="bar">
-                                    <div class="box"><span></span></div>
-                                </div>
-                                <div class="text">PHP</div>
-                            </div>
                         </div>
+                        <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-4">
+                          <div class="card php">
+                              <div class="circle">
+                                  <div class="bar">
+                                      <div class="box"><span></span></div>
+                                  </div>
+                                  <div class="text">PHP</div>
+                              </div>
+                          </div>
+
+                        </div>
+                      </div>
+
                     </div>                    
                 </div>
             </div>
@@ -216,7 +231,7 @@
         </div>        
         <div class="row">
           <div class="col-12 sub_judul text-center mb-2 mt-2">
-            <h5 class="fw-bold">Dinas Kependudukan dan Pencatatan Sipil Kab.Probolinggo | Priode Magang : Juni 2024 – Nov 2024</h5>            
+            <h5 class="fw-bold">Dinas Kependudukan dan Pencatatan Sipil Kab.Probolinggo | Priode : Juni 2024 – Nov 2024</h5>            
           </div>
           <div class="col-md-6 my-auto">
             <img src="img/capil.jpeg" class="img-fluid rounded">
@@ -248,7 +263,7 @@
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-md-6">
+          <div class="col-md-6 g-4">
             <section id="folder_shape">
               <div class="container-fluid panel">
                   <div class="folder-body">
@@ -259,7 +274,7 @@
             </section>
           </div>
 
-          <div class="col-md-6">
+          <div class="col-md-6 g-4">
             <section id="folder_shape">
               <div class="container-fluid panel">
                   <div class="folder-body">
@@ -270,7 +285,7 @@
             </section>
           </div>
 
-          <div class="col-md-6">
+          <div class="col-md-6 g-4">
             <section id="folder_shape">
               <div class="container-fluid panel">
                   <div class="folder-body">
@@ -287,10 +302,10 @@
 
     <!-- pesan dan kesan -->
     <section id="comment-form" class="p-3">
-      <div class="container alert alert-info">
+      <div class="container alert alert-info ">
         <div class="row">
-          <div class="col-md-3 scroll-height mt-3">
-            <h5 class="text-center">Pesan kesan Anda </h5>
+          <div class="col-md-3 mb-3 justify-content-center g-4 scroll-height mt-3 mb-1">
+            <h5 class="text-center fw-bold">Pesan Kesan Anda </h5>
               <form action="" name="coment_user">
                 <div class="position-wrapper">
                   <input type="text" class="form-control mb-1"  name="nama" placeholder="Nama" id="nama" maxlength="10" required>
@@ -299,10 +314,9 @@
                 <div class="position-wrapper">
                   <textarea class="form-control " rows="2"  name="pesan" placeholder="Pesan" id="pesan" maxlength="30" required></textarea>
                   <div id="charCounterPesan" class="char-counterPesan">0/30</div>   
-                  <h6 class="ms-1 fw-bold mt-1" style="font-size: 15px;">Nb* Bijaklah dalam berkata</h6>
-                </div>
-                
-                <div>
+                  <h6 class="ms-1 text-danger fw-bold mt-1" style="font-size: 15px;">Nb* Bijaklah dalam berkata</h6>
+                </div>                
+                <div class="">
                   <button class=" form-control btn btn-primary btn-kirim" type="submit">Kirim</button>
                   <button class=" form-control btn btn-primary btn-loading d-none" type="button" disabled>
                   <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
@@ -311,16 +325,15 @@
                 </div>
               </form>
           </div>
-          <div class="col-md-9 scroll-height scrool-vertikal ">
-            <nav class="d-flex justify-content-center mt-3">
-              <!-- <h5 class="text-center position-fixed z-1  p-1 rounded-3   alert-info">Survey Membuktikan</h5> -->
-              <div type="" class=" position-relative">
-                <h5 class="text-center">Survey Membuktikan</h5>                
-                <span class="position-absolute d-none top-0 ms-3 start-100 translate-middle bg-danger badge rounded-pill  info-add "> 1+ </span>
+          <div class="col-md-9 scroll-height scrool-vertikal parent-div"  style=" overflow-y: auto; position: relative;">
+            <nav class="sticky-top alert alert-info p-1 z-1">
+              <div class="mt-3 d-flex justify-content-center align-items-center">
+                <h5 class="text-center">Survei Membuktikan</h5>                
+                <span class="position-absolute d-none translate-middle bg-danger badge rounded-pill  info-add "> 1+ </span>
               </div>              
-            </nav>
-            <div class="">
-              <div id="comment" >
+            </nav>              
+            <div class="box-comment p-3">
+              <div id="comment" style="margin-top: -13px;">
                   <div id="comment-list" class="row"></div>
               </div>
             </div>    
@@ -370,7 +383,7 @@
                                     <div class="time">
                                     <!-- Tempat untuk waktu -->
                                     <i class="bi bi-clock"></i>
-                                    <div id="waktu"></div> WIB
+                                    <div id="waktu"></div>WIB
                                   </div>
                                 </div>
                               </div>
@@ -419,10 +432,11 @@
                       <div class="copyright text-center mt-4 d-flex justify-content-center" >
                         <div class="col-md-4 my-auto ">
                           <div class="social-icon-footer text-center">
-                            <i class="bi bi-linkedin"></i>
-                            <i class="bi bi-github"></i>
-                            <i class="bi bi-youtube"></i>
-                            <i class="bi bi-instagram"></i>
+                             <a href="https://github.com/" target="_blank"><i class="bi bi-github"></i></a>
+                            <a href="" target="_blank"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.tiktok.com/@ifantrijulianmaul?_r=1&_d=efagi12j9fhceb&sec_uid=MS4wLjABAAAAL_LSSG5sAJgAuBhatWw32YjquSD4N_ZYz8QyX7P44ZI3jfwKzd7VX2PA_EFXTu6r&share_author_id=6964333624032953345&sharer_language=id&source=h5_t&u_code=dii5m49b1bd55k&timestamp=1747841191&user_id=6964333624032953345&sec_user_id=MS4wLjABAAAAL_LSSG5sAJgAuBhatWw32YjquSD4N_ZYz8QyX7P44ZI3jfwKzd7VX2PA_EFXTu6r&utm_source=whatsapp&utm_campaign=client_share&utm_medium=android&share_iid=7505187777438287623&share_link_id=209740f1-e0c0-4229-af60-0b3f9f63f816&share_app_id=1180&ugbiz_name=ACCOUNT&ug_btm=b8727%2Cb7360&social_share_type=5&enable_checksum=1" target="_blank"><i class="bi bi-tiktok"></i></a>
+                            <a href="" target="_blank"><i class="bi bi-youtube"></i></a><br>
+                            <h5 href="" class="fw-bold text-decoration-none text-white">
                             <h6 class="mt-3">Desain By : <span>Creative Academy Indonesia</span></h6>
                             <h6 class="">Suport By : <span><a href="https://formspree.io/" target="_blank"><img src="img/formspree-new.svg" class="img-fluid" alt=""></a></span></h6>
                             <p>&copy; 2025 Ifan Tri Julian Maulana</p>
@@ -434,30 +448,6 @@
           </div>
          </div>
     </footer>   
-
-    <!-- <footer class="py-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 text-center">
-            <img src="img/ig1.png" width="60px" class="border-50" alt="">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-12 text-center text-white">
-            <p>Thank For Scrolling, That's All Folks</p>
-          </div>
-          <div class="social-icon-footer text-center">
-            <i class="bi bi-linkedin"></i>
-            <i class="bi bi-github"></i>
-            <i class="bi bi-youtube"></i>
-            <i class="bi bi-instagram"></i>
-            <h6 class="mt-3">Desain By : <span>Creative Academy Indonesia</span></h6>
-            <h6 class="">Suport By : <span>Freepik & PngWing</span></h6>
-          </div>
-        </div>
-      </div>
-    </footer> -->
     <!-- end footer -->
 
     <script src="bootstrap-5.3.2/js/bootstrap.bundle.min.js"></script>
