--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-circle-progress/1.2.2/circle-progress.min.js"></script>
 </head>
-<body oncontextmenu="return false">    
+<body >    
   <!-- oncontextmenu="return false" -->
     <!-- Navbar --> 
      <section id="home">
@@ -143,7 +143,7 @@
                     <div class="wrapper d-flex justify-content-center">
                       <div class="row">
                         <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-4">
-                          <div class="card office">
+                          <div class="card 1">
                               <div class="circle">
                                   <div class="bar">
                                       <div class="box"><span></span></div>
@@ -153,7 +153,7 @@
                           </div>
                         </div>
                         <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-4">
-                          <div class="card html">
+                          <div class="card 2">
                               <div class="circle">
                                   <div class="bar">
                                       <div class="box"><span></span></div>
@@ -163,22 +163,22 @@
                           </div>
                         </div>
                         <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-4">
-                        <div class="card js">
+                        <div class="card 3">
                             <div class="circle">
                                 <div class="bar">
                                     <div class="box"><span></span></div>
                                 </div>
-                                <div class="text">javascrip</div>
+                                <div class="text">DESAIN</div>
                             </div>
                         </div>
                         </div>
                         <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-4">
-                          <div class="card php">
+                          <div class="card 4">
                               <div class="circle">
                                   <div class="bar">
                                       <div class="box"><span></span></div>
                                   </div>
-                                  <div class="text">PHP</div>
+                                  <div class="text">Prompting AI</div>
                               </div>
                           </div>
 
@@ -329,7 +329,27 @@
             <nav class="sticky-top alert alert-info p-1 z-1">
               <div class="mt-3 d-flex justify-content-center align-items-center">
                 <h5 class="text-center">Survei Membuktikan</h5>                
-                <span class="position-absolute d-none translate-middle bg-danger badge rounded-pill  info-add "> 1+ </span>
+                <button onclick="showOTPForm()" class="position-absolute d-none  translate-middle bg-danger badge rounded-pill  info-add  admin" style="border: none;">1+</button>
+                    <div class="form-veri ">  
+                    <!-- Latar belakang transparan untuk form OTP -->
+                    <div id="overlay" class="overlay" style="display: none;" onclick="hideOTPForm()"></div>
+                    
+                    <!-- Form OTP (disembunyikan dulu) -->
+                    <div id="otpForm" class="otp-form" style="display: none;">
+                      <div class="row">
+                        <div class="col-md-6 g-2 ">
+                          <input type="password" id="otpInput" placeholder="Masukkan OTP" class="form-control" style=" display: inline-block;">
+                        </div>
+                        <div class="col-md-6 g-2">
+                          <button onclick="cekOTP()" class=" form-control btn btn-primary btn-veri">Verifikasi</button>
+                          <button class="form-control  btn btn-primary btn-loadingVeri d-none" type="button" disabled>
+                          <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                          <span role="status">Loading...</span>
+                        </div>
+                      </div>
+                      </button>
+                    </div>
+                  </div>
               </div>              
             </nav>              
             <div class="box-comment p-3">
