--- a/index.html
+++ b/index.html
@@ -134,60 +134,54 @@
     <!-- skill -->
       <section id="skill">
         <div class="container-fluid">
-            <div class="container">
-                <div class="row d-flex judul justify-content-center" >
-                    <div class="col-lg-10">
-                        <h1 class="fw-bold text-center">Skill</h1>
-                        <hr>
-                    </div>
-                    <div class="wrapper d-flex justify-content-center">
-                      <div class="row">
-                        <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-4">
-                          <div class="card 1">
-                              <div class="circle">
-                                  <div class="bar">
-                                      <div class="box"><span></span></div>
-                                  </div>
-                                  <div class="text">MR OFFICE</div>
-                              </div>
-                          </div>
-                        </div>
-                        <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-4">
-                          <div class="card 2">
-                              <div class="circle">
-                                  <div class="bar">
-                                      <div class="box"><span></span></div>
-                                  </div>
-                                  <div class="text">HTML & CSS</div>
-                              </div>
-                          </div>
-                        </div>
-                        <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-4">
-                        <div class="card 3">
-                            <div class="circle">
-                                <div class="bar">
-                                    <div class="box"><span></span></div>
-                                </div>
-                                <div class="text">DESAIN</div>
+          <div class="row d-flex judul justify-content-center" >
+              <div class="col-lg-10">
+                  <h1 class="fw-bold text-center">Skill</h1>
+                  <hr>
+              </div>
+                <div class="row wrapper d-flex justify-content-center">
+                  <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-1">
+                    <div class="card 1">
+                        <div class="circle">
+                            <div class="bar">
+                                <div class="box bg"><span></span></div>
                             </div>
+                            <div class="text">MR OFFICE</div>
                         </div>
+                    </div>
+                  </div>
+                  <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-1">
+                    <div class="card 2">
+                        <div class="circle">
+                            <div class="bar">
+                                <div class="box"><span></span></div>
+                            </div>
+                            <div class="text">HTML & CSS</div>
                         </div>
-                        <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-4">
-                          <div class="card 4">
-                              <div class="circle">
-                                  <div class="bar">
-                                      <div class="box"><span></span></div>
-                                  </div>
-                                  <div class="text">Prompting AI</div>
-                              </div>
+                    </div>
+                  </div>
+                  <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-1">
+                  <div class="card 3">
+                      <div class="circle">
+                          <div class="bar">
+                              <div class="box"><span></span></div>
                           </div>
-
-                        </div>
+                          <div class="text">DESAIN</div>
                       </div>
-
-                    </div>                    
+                  </div>
+                  </div>
+                  <div class="col-md-3 col-6 d-flex mb-3 justify-content-center g-1">
+                    <div class="card 4">
+                        <div class="circle">
+                            <div class="bar">
+                                <div class="box"><span></span></div>
+                            </div>
+                            <div class="text">Prompting AI</div>
+                        </div>
+                    </div>
                 </div>
-            </div>
+              </div>                    
+          </div>
         </div>
       </section>
     <!-- end skill -->
@@ -263,7 +257,7 @@
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-md-6 g-4">
+          <div class="col-md-6 g-1">
             <section id="folder_shape">
               <div class="container-fluid panel">
                   <div class="folder-body">
@@ -274,7 +268,7 @@
             </section>
           </div>
 
-          <div class="col-md-6 g-4">
+          <div class="col-md-6 g-1">
             <section id="folder_shape">
               <div class="container-fluid panel">
                   <div class="folder-body">
@@ -285,7 +279,7 @@
             </section>
           </div>
 
-          <div class="col-md-6 g-4">
+          <div class="col-md-6 g-1">
             <section id="folder_shape">
               <div class="container-fluid panel">
                   <div class="folder-body">
@@ -304,7 +298,7 @@
     <section id="comment-form" class="p-3">
       <div class="container alert alert-info ">
         <div class="row">
-          <div class="col-md-3 mb-3 justify-content-center g-4 scroll-height mt-3 mb-1">
+          <div class="col-md-3 mb-3 justify-content-center g-1 scroll-height mt-3 mb-1">
             <h5 class="text-center fw-bold">Pesan Kesan Anda </h5>
               <form action="" name="coment_user">
                 <div class="position-wrapper">
@@ -329,7 +323,7 @@
             <nav class="sticky-top alert alert-info p-1 z-1">
               <div class="mt-3 d-flex justify-content-center align-items-center">
                 <h5 class="text-center">Survei Membuktikan</h5>                
-                <button onclick="showOTPForm()" class="position-absolute d-none  translate-middle bg-danger badge rounded-pill  info-add  admin" style="border: none;">1+</button>
+                <button onclick="showOTPForm()" class="position-absolute d-  translate-middle bg-danger badge rounded-pill  info-add  admin" style="border: none;">1+</button>
                     <div class="form-veri ">  
                     <!-- Latar belakang transparan untuk form OTP -->
                     <div id="overlay" class="overlay" style="display: none;" onclick="hideOTPForm()"></div>
