--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-md-6 g-1">
+          <div class="col-md-6 g-4">
             <section id="folder_shape">
               <div class="container-fluid panel">
                   <div class="folder-body">
@@ -268,7 +268,7 @@
             </section>
           </div>
 
-          <div class="col-md-6 g-1">
+          <div class="col-md-6 g-4">
             <section id="folder_shape">
               <div class="container-fluid panel">
                   <div class="folder-body">
@@ -279,7 +279,7 @@
             </section>
           </div>
 
-          <div class="col-md-6 g-1">
+          <div class="col-md-6 g-4">
             <section id="folder_shape">
               <div class="container-fluid panel">
                   <div class="folder-body">
@@ -323,7 +323,7 @@
             <nav class="sticky-top alert alert-info p-1 z-1">
               <div class="mt-3 d-flex justify-content-center align-items-center">
                 <h5 class="text-center">Survei Membuktikan</h5>                
-                <button onclick="showOTPForm()" class="position-absolute d-  translate-middle bg-danger badge rounded-pill  info-add  admin" style="border: none;">1+</button>
+                <button onclick="showOTPForm()" class="position-absolute d-none  translate-middle bg-danger badge rounded-pill  info-add  admin" style="border: none;">1+</button>
                     <div class="form-veri ">  
                     <!-- Latar belakang transparan untuk form OTP -->
                     <div id="overlay" class="overlay" style="display: none;" onclick="hideOTPForm()"></div>
